--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -4,8 +4,24 @@
 }
 
 .list{
-    margin-bottom: 60px;
+    margin: 60px 0;
+    
     /* border: 1px solid; */
+}
+
+@media (max-width: 670px){
+
+    .list{
+        
+       border: 1px solid;
+       display: flex;
+       flex-direction: column;
+    }
+
+    .line > * {
+        font-size: 16px;
+    }
+
 }
 
 .container{
@@ -20,10 +36,18 @@ hr{
 .about-top{
     text-align: center;
     margin: 0 auto;
- 
-    width: 80%;
-    
-    
+    width: 80%;      
+}
+
+@media (max-width: 670px){
+
+    .about-top{
+        
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
 .about-first > h1{ 
@@ -100,6 +124,9 @@ em{
     font-size: 20px;
     padding: 10px;
 }
+
+
+
 
 .line > div:nth-child(2) {
     margin: 0 20px;
