--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -40,7 +40,7 @@
   }
   .popup {
     width:550px;
-    height: 380px;
+    height: auto;
     padding:30px 20px;
     background:#f5f5f5;
     border-radius:10px;
@@ -125,6 +125,135 @@
     transition: all 300ms ease-in-out 400ms;
   }
 
-  /* FORM */
+  /* Media Queries */
 
   
+
+
+@media (max-width: 1670px){
+  .wrapper-div-img {
+
+  top: -85%;
+  }
+}
+
+@media (max-width: 1370px){
+  body{
+    /* background: green; */
+  }
+  .wrapper-div-img {
+    
+  top: -45%;
+  width: 50%;
+  }
+  
+ 
+
+  .popup{
+    
+    width: 65%;
+    left: -15px;
+    height: auto;
+  }
+
+  .contact{
+    /* border: 1px solid orange; */
+    display: flex;
+  }
+
+  .footer-nav-links{
+    /* border: 1px solid red; */
+    margin: 10px 0;
+    width: 100%;
+
+  }
+}
+
+@media (max-width: 1070px){
+  /* body{
+    background: orange;
+  } */
+
+  .main-copy{
+  
+    width: 100%;
+  }
+
+  .wrapper-div-img {
+ display: none;
+  }
+
+  .developer .img1 {
+    margin-top: 100px;
+  }
+ 
+
+
+  .footer-nav-links{
+    /* border: 1px solid red; */
+    margin: 10px 0;
+    width: 100%;
+
+  }
+}
+
+
+/*SMALL */
+@media (max-width: 670px){
+
+  .read-about{
+ 
+    padding: 0;
+  }
+
+  .or-class{
+    padding-right: 20px;
+  }
+  .popup{
+   
+    width: 80%;
+    left: -35px;
+    height: auto;
+  }
+ 
+  .main-copy{
+  
+    width: 100%;
+  }
+
+  .wrapper-div-img {
+ display: none;
+  }
+
+  .developer .img1 {
+    margin-top: 100px;
+  }
+
+  .large-studies{
+    line-height: 80px;
+   
+  }
+  /* .dark-font-helper {
+    font-family: "Lato";
+    font-size: 2\1.2rem;
+    font-weight: 900;
+    padding-bottom: 15px;
+    opacity: 0;
+  } */
+
+  .contact{
+    padding: 5px 0;
+   display: flex;
+   flex-direction: column;
+  }
+
+
+  .wrapper > * {
+  display: flex
+  }
+}
+
+
+
+
+
