--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -1,6 +1,7 @@
 .margin-bottom{
     margin-bottom: 200px;
    border: 1px solid transparent;
+   margin-top: 200px;
 }
 
 .list{
@@ -13,7 +14,7 @@
 
     .list{
         
-       border: 1px solid;
+       /* border: 1px solid; */
        display: flex;
        flex-direction: column;
     }
